--- a/styles/album.css
+++ b/styles/album.css
@@ -51,6 +51,7 @@ body.album {
  .song-item-number {
      width: 5%;
      min-width: 30px;
+     text-align: center;
  }
 
  .song-item-title {
@@ -84,14 +85,9 @@ body.album {
 
   /* Centered text looks better on smaller devices */
 
-
-
-
-
-
-
-
-
+  .album-song-button {
+      padding-top: 7px;
+}
 
  @media (max-width: 640px) and (min-width: 320px) {
      .album-view-details {
