--- a/styles/album.css
+++ b/styles/album.css
@@ -87,6 +87,7 @@ body.album {
 
   .album-song-button {
       padding-top: 7px;
+      padding-left: 2px;
 }
 
  @media (max-width: 640px) and (min-width: 320px) {
